<resources>
    <string name="favoritos">Favoritos</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="rutina">Rutina</string>
    <string name="dietas">Dietas</string>

    <!-- EJERCICIOS -->
    <string name="pectoral">Pectoral</string>
    <string name="espalda">Espalda</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="espalda_baja">Espalda Inferior</string>
    <string name="trapecio">Trapecio</string>
    <string name="antebrazo">Antebrazo</string>
    <string name="abdominales">Abdominales</string>
    <string name="hombro">Hombro</string>
    <string name="nalgas">Nalgas</string>
    <string name="frontal_muslo">Frontal Muslo</string>
    <string name="posterior_muslo">Posterior Muslo</string>
    <string name="pnatorrilla">Pantorrilla</string>

    <string name="dominada_m_agarre_amplio">Dominadas Maquina, agarre amplio.</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Descripcion_Dominadas_Maquina_agarre_amplio">Con este ejercicio podras realizar dominadas si no eres capaz de realizarlas sin ayuda ya que con esta maquina se reduce el peso a levantar.</string>

    <!-- DIETAS -->
    <string name="kcal1200">1200 kcal</string>
    <string name="kcal1500">1500 kcal</string>
    <string name="kcal1800">1800 kcal</string>
    <string name="kcal2000">2000 kcal</string>
    <string name="kcal2200">2200 kcal</string>
    <string name="kcal2500">2500 kcal</string>
    <string name="kcal2800">2800 kcal</string>
    <string name="kcal3000">3000 kcal</string>
    <string name="kcal3200">3200 kcal</string>

    <!-- RUTINAS -->
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="vierne">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>

    <!-- MENU DESPLEGABLE -->
    <string name="cronometro">Cronometro</string>
    <string name="notas">Notas</string>
    <string name="calendario">Calendario</string>
    <string name="camara">Camara</string>
    <string name="inicio">Inicio</string>
    <string name="configuracion">Ayuda</string>
    <string name="compartir">Compartir</string>
    <string name="comunicacion">Comunicacion</string>

    <!-- CONTENIDO 1200 -->
    <string name="content_desayuno">
        Desayuno \n \t un vaso de leche desnatada, \n \t 20 g de pan untados con tomate y aceite de oliva.\n
        Media mañana \n \t 100 g de melocotón.\n
        Almuerzo \n \t 200 g de puerros, \n \t 100 g de carne de pollo, \n \t 30 g de pan, \n \t 1 fruta del tiempo.\n
        Media tarde \n \t 200 cc de leche desnatada.\n
        Cena \n \t sopa de verduras, \n \t 65 g de pescado azul, \n \t 30 g de pan, \n \t una fruta del tiempo.</string>

    <!-- CRONOMETRO -->
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>

    <!-- CRONOMETRO -->
    <string name="t1">Añadir ejerccicios a mi rutina.</string>
    <string name="t2">Utilizar el boton de compartir</string>
    <string name="t3">Utilizacion del cronometro</string>
    <string name="t4">Desplegar menu lateral</string>
    <string name="t5">Iniciar sesion / Rgistrarse</string>

    <string name="c1">Primero entramos en lapantalla de rutinas, seleccionamos en dia de la semana y mantenemos pulsado sobre el boton de añadir que contiene el simbolo (+).</string>
    <string name="c2">Para utilizar el boton de compartir solamente tenemos que realizar una pulsacion rapida y aparecera las opciones de compartir.</string>
    <string name="c3">En el centro del cronometro debemos de introducir los minutos que deseamos y pulsar en play, si quieres pararlo pulsas sobre el icono de stop, y si quieres reiniciarlo pulsa sobre el icono del centro parareiniciar.</string>
    <string name="c4">Para desplegar el menu lateral tenemos dos opciones deslizando el dedo horizontalmente sobre la pantalla hacia la derecha o pulsando en elicono superior derecho de menu.</string>
    <string name="c5">Para iniciar sesion o registrate debes pulsar sobre los tres puntos del icono superior de la izquierda e intoducir tus datos.</string>



    <string name="app_name">GymToday</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GymToday</string>
    <string name="nav_header_subtitle">GymToday.info@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_user">Usuario</string>
    <string name="title_activity_dietas">Dietas</string>
    <string name="title_activity_ejercicios">Ejercicios</string>
    <string name="title_activity_ejercicios_espalda">Ejercicios Espalda</string>
    <string name="title_activity_ejercicios_lunes">Ejercicios Lunes</string>
    <string name="title_activity_favourites">Favoritos</string>
    <string name="title_activity_kcal_1200_">1200 Calorias</string>
    <string name="title_activity_rutina">Rutina</string>
    <string name="title_activity_ejercicio1_espalda">Ejercicio</string>
    <string name="title_activity_cronometro">Cronometro</string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="title_activity_notas">Notas</string>
    <string name="title_activity_crear_nota">Nueva Nota</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_rutina_lunes">RutinaLunesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ayuda">Ayuda</string>
</resources>
