<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FavouritesActivity"
    tools:showIn="@layout/app_bar_favourites">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/espalda"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/pectoral"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/biceps"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/triceps"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/trapecio"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/hombro"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/antebrazo"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/abdominales"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="26dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/espalda_baja"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/nalgas"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/frontal_muslo"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/posterior_muslo"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/pnatorrilla"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>