<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Ejercicio1EspaldaActivity"
    tools:showIn="@layout/app_bar_ejercicio1_espalda"
    android:orientation="vertical"
    android:id="@+id/detectGesture">

            <fragment
                android:id="@+id/youtubeplayerfragment"
                android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textn"
                android:textStyle="bold"
                android:text="@string/dominada_m_agarre_amplio"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textn"
                android:textStyle="bold"
                android:text="@string/Descripcion"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/textn"
                android:text="@string/Descripcion_Dominadas_Maquina_agarre_amplio" />
</LinearLayout>