<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AyudaActivity"
    tools:showIn="@layout/app_bar_ayuda"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/cardRutina">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="4">

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/t1"
                 android:textColor="@color/textn"
                 android:textStyle="bold"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btn1"
                android:src="@drawable/ic_unfold_more_black_24dp"
                android:background="@color/cardRutina" />

        </LinearLayout>

    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:ael_duration="500"
        app:ael_expanded="true"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c1" />

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <LinearLayout
        android:id="@+id/principal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/cardRutina">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t2"
                android:textColor="@color/textn"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btn2"
                android:src="@drawable/ic_unfold_more_black_24dp"
                android:background="@color/cardRutina" />

        </LinearLayout>

    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contenido2"
        app:ael_expanded="true"
        app:ael_duration="500"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c2"/>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <LinearLayout
        android:id="@+id/principal3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/cardRutina">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t3"
                android:textColor="@color/textn"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btn3"
                android:src="@drawable/ic_unfold_more_black_24dp"
                android:background="@color/cardRutina" />

        </LinearLayout>

    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contenido3"
        app:ael_expanded="true"
        app:ael_duration="500"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c3"/>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <LinearLayout
        android:id="@+id/principal4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/cardRutina">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t4"
                android:textColor="@color/textn"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btn4"
                android:src="@drawable/ic_unfold_more_black_24dp"
                android:background="@color/cardRutina" />

        </LinearLayout>

    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contenido4"
        app:ael_expanded="true"
        app:ael_duration="500"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c4"/>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <LinearLayout
        android:id="@+id/principal5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/cardRutina">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t5"
                android:textColor="@color/textn"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btn5"
                android:src="@drawable/ic_unfold_more_black_24dp"
                android:background="@color/cardRutina" />

        </LinearLayout>

    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contenido5"
        app:ael_expanded="true"
        app:ael_duration="500"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c5"/>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

</LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>